# cpp_gamedev_tests

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
sdl3/: CMakeLists.txt  build.sh  run.sh
sfml3/: CMakeLists.txt  build.sh
sfml3/logs/: log.txt
sfml3/src/: logger.hpp  sprite_test.cpp
sfml3/src/celestial_bodies/: CMakeLists.txt  main.cpp
sfml3/src/celestial_bodies/inc/: planet.hpp
sfml3/src/examples/window/: CMakeLists.txt
sfml3/src/logging/: basic_log_controller.hpp
sfml3/src/particle_test/: CMakeLists.txt  main.cpp
sfml3/src/particle_test/inc/: particle.hpp
sfml3/src/sprite_test/: CMakeLists.txt  sprite_test.cpp
sfml3/src/tilemap_test/: CMakeLists.txt  main.cpp
sfml3/src/vertexarray_test/: CMakeLists.txt  main.cpp
sfml3/src/vertexarray_test/inc/: entity.hpp
